--- a/src/index.css
+++ b/src/index.css
@@ -412,6 +412,12 @@ ul {
   display: inline-block;
 }
 
+.inline-block-items {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .para-last-line {
   max-width: 15rem;
   color: var(--grey-500);
@@ -443,12 +449,6 @@ ul {
   transform: rotateZ(-60deg);
 }
 
-.inline-block-items {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 @media screen and (min-width: 768px) {
   .center-content {
     display: inline-block;
@@ -460,6 +460,7 @@ ul {
   .btn-dark {
     display: inline-block;
     margin-right: -1rem;
+    order: -1;
   }
   .max-w-3xl {
     width: 90vw;
@@ -486,7 +487,7 @@ ul {
     flex-direction: row;
     gap: 0;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     /* border: 2px solid black; */
   }
 
@@ -519,7 +520,7 @@ ul {
 }
 
 .img-container {
-  height: 15rem;
+  height: 15.5rem;
   width: 100%;
   overflow: hidden;
 }
