--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ html {
   --backgroundColor: var(--grey-50);
   --textColor: var(--grey-900);
   --borderRadius: 0.25rem;
+  --rounded-full: 9999px;
   --letterSpacing: 1px;
   --transition: all 0.3s ease-in-out;
   --maxWidth: 1120px;
@@ -151,7 +152,7 @@ ul {
   cursor: pointer;
   background: transparent;
   border: 1px solid var(--grey-400);
-  border-radius: 9999px;
+  border-radius: var(--rounded-full);
   letter-spacing: var(--letterSpacing);
   padding: 0.85rem 1.35rem;
   transition: var(--transition);
@@ -239,17 +240,36 @@ ul {
 .gap-1 {
   gap: 4px;
 }
+.gap-2 {
+  gap: 8px;
+}
+
+.gap-3 {
+  gap: 12px;
+}
 
 .max-w-3xl {
   max-width: 60rem;
 }
 
 .justify-between {
-  justify-content: between;
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .text-gray-500 {
   color: var(--grey-500);
+}
+
+.text-gray-300 {
+  color: var(--grey-300);
+}
+
+.text-white {
+  color: var(--white);
 }
 
 .font-normal {
@@ -403,6 +423,7 @@ ul {
 
   .hero-align {
     padding-top: 0;
+    padding-bottom: 2.5rem;
     gap: 8px;
     text-align: left;
   }
@@ -423,11 +444,11 @@ ul {
 }
 
 @media screen and (min-width: 1280px) {
-  .star-moon {
+  .moon-container {
     position: absolute;
     top: 0%;
-    right: -30%;
-    overflow: hidden;
+    right: 0%;
+    transform: translate(50%, 0%);
     color: var(--grey-400);
   }
 
@@ -437,20 +458,21 @@ ul {
   }
 
   .circle {
-    height: 50rem;
-    width: 50rem;
+    height: 40rem;
+    width: 40rem;
     border-radius: 50%;
     border: 2px solid var(--grey-400);
   }
 }
 
-.img-container {
-  height: 15.5rem;
+.card {
+  height: 20rem;
   width: 100%;
   overflow: hidden;
+  position: relative;
 }
 
-.img-container > img {
+.card > img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -461,5 +483,143 @@ ul {
     display: grid;
     grid-template-columns: 1fr 1fr 2fr;
     gap: 0;
+  }
+}
+
+.flex-start {
+  align-items: flex-start;
+}
+
+.card-content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  padding: 1rem;
+  padding-bottom: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 8px;
+}
+
+.count {
+  font-size: 0.85rem;
+  border-radius: var(--rounded-full);
+  letter-spacing: var(--letterSpacing);
+  padding: 0.25rem 1rem;
+  transition: var(--transition);
+  color: var(--white);
+  border: 2px solid var(--white);
+  width: fit-content;
+}
+
+.avatar-container {
+  display: flex;
+  align-items: center;
+  gap: 0;
+}
+
+.avatar {
+  height: 2.5rem;
+  width: 2.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 2px solid var(--white);
+}
+
+.avatar > img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.shift-left {
+  margin-left: -0.5rem;
+}
+
+.card-1-text {
+  color: var(--white);
+  font-size: 1.2rem;
+  margin-bottom: 0;
+}
+
+.arrow-down-right {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.border-white {
+  border: 1.5px solid var(--white);
+}
+
+.card-2-link {
+  width: 100%;
+  padding: 0.25rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid var(--grey-400);
+}
+
+.card-2-link > span {
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+}
+
+.align-stretch {
+  align-items: stretch;
+}
+
+.pr-1 {
+  padding-right: 4px;
+}
+
+.font-2rem {
+  font-size: 2rem;
+}
+
+.font-2-5rem {
+  font-size: 2.5rem;
+}
+
+.card-3-content {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.amount {
+  font-size: 4rem;
+  color: var(--white);
+}
+
+.card-3-content > p {
+  font-size: 0.95rem;
+  color: var(--grey-100);
+  margin: 0;
+}
+@media screen and (min-width: 768px) {
+  .card-3-content {
+    flex-direction: row;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+  }
+  .amount {
+    font-size: 5.5rem;
+  }
+  .card-3-content > p {
+    font-size: 1.15rem;
+    color: var(--grey-100);
+    max-width: 18rem;
+    margin: 0;
+  }
+
+  .pb-0 {
+    padding-bottom: 0px;
   }
 }
